@@ -345,6 +345,10 @@ def ui_main_or_search_loop(r, repo: Repository, conf: Config):
                     s.tag_scrollview.up()
                 elif k == '+':
                     s.tag_scrollview.down()
+                elif k == '[':
+                    s.tag_scrollview.up(5)
+                elif k == ']':
+                    s.tag_scrollview.down(5)
                 elif ord(k) == 10:
                     s.selected_tag = s.tags[s.tag_scrollview.selected()][0]
                     papers = [p for p in r if s.selected_tag in p.tags()]
@@ -376,6 +380,10 @@ def ui_main_or_search_loop(r, repo: Repository, conf: Config):
                 v.up()
             elif k == 'k' or k == '+':
                 v.down()
+            elif k == '[':
+                v.up(5)
+            elif k == ']':
+                v.down(5)
             elif k == 'n':
                 notes_of_paper(repo, papers[v.selected()])
             elif k == 'U':
